Update 1.0.1: Fixing bugs and added quit button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,7 +44,7 @@ input {
     font-family: 'Supreme', sans-serif;
 }
 
-#fuoriAddBtn, #softwareAddBtn, .delete-btn, .closeButton, .btn {
+#fuoriAddBtn, #softwareAddBtn, .delete-btn, .closeButton, .btn, .quitButton {
     align-self: center; 
     padding: 10px 15px;
     width: 100%;
@@ -147,4 +147,11 @@ html {
     display: inline-flex;
     align-items: center;
     justify-content: center;     
+}
+
+.quitButton{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;   
+    gap: 10px;
 }
