--- a/src/css/style.css
+++ b/src/css/style.css
@@ -184,7 +184,7 @@ html {
     gap: 10px; 
 }
 
-#cleanSectionBtn{
+#cleanSectionBtn, #changeNameBtn{
     align-self: center; 
     padding: 10px 15px;
     border: none;
