--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,6 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    height: 95vh;
 }
 
 .column {
@@ -135,6 +134,8 @@ html {
 
 .info{
     display: none;
+    margin-top: 10px;
+    position: static;
 }
 
 .infoButton{
@@ -251,4 +252,23 @@ html {
 
 canvas{
     font-family: 'Excon', sans-serif;
+}
+
+select{
+    width: 80%;
+    height: 40px;
+    font-family: 'Supreme', sans-serif;
+    background-color: #3d3d3d;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+
+select:focus{
+    outline: none;
+    animation: animationInput 2s ease-in-out infinite;
+}
+
+option{
+    font-family: 'Supreme', sans-serif;
 }
