--- a/src/css/companyCreation.css
+++ b/src/css/companyCreation.css
@@ -18,16 +18,14 @@ h3{
 
 .special{
     -webkit-text-fill-color: transparent; 
-    background-image: linear-gradient(to right,#818cf8,#e0e7ff,#38bdf8,#e879f9,#38bdf8,#e0e7ff,#818cf8);
+    background-image: linear-gradient(to right, #ffc400, #ff9100, #ff530f, #e62c6d, #b25aff, #b25aff, #e62c6d, #ff530f, #ff9100, #ffc400);
     background-size: 200% auto;
     -webkit-background-clip: text;
     animation: gradient 8s linear infinite;
 }
 
 @keyframes gradient {
-    to {
-        background-position: 200% center
-    }
+    to {background-position: 200% center}
 }
 
 input {
