--- a/src/css/boot.css
+++ b/src/css/boot.css
@@ -1,14 +1,6 @@
-body{
-    background-color: #1a1a1a;
-}
+body{background-color: #1a1a1a;}
 
-.logo{
-    margin-top: 50px;
-    width: 200px;
-    height: 200px;
-}
-
-/*LOADER BY: https://cssloaders.github.io/*/
+/*LOADER BY: https://cssloaders.github.io*/
 .loader {
     margin-top: 150px;
     width: 48px;
@@ -34,17 +26,35 @@ body{
 }
   
 @keyframes rotation {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
 }
 
 /*END LOADER*/
-
 @keyframes FadeOut{
     0%{opacity: 1;}
     100%{opacity: 0;}
+}
+
+.logo {
+    margin-top: 50px;
+    width: 200px;
+    height: 200px;
+    background-image: linear-gradient(to right, #ffc400, #ff9100, #ff530f, #e62c6d, #e62c6d, #ff530f, #ff9100, #ffc400);
+    background-size: 200% auto;
+    animation: gradient 1s linear infinite;
+    -webkit-mask-image: url('../assets/_gear.png');
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: contain;
+    -webkit-mask-position: center;
+    mask-image: url('../assets/_gear.png');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    mask-position: center;
+    display: inline-block;
+}
+
+@keyframes gradient {
+    95% {background-position: 200% center}
+    100%{background-position: 204% center;}
 }
