--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,25 +141,29 @@ input::after{
     animation: animInputOut 1s ease-in-out forwards;
 }
 
-button:focus, option:focus, .aiButton{
+button:focus:not(.infoButton):not(.settingsButton),
+option:focus:not(.infoButton):not(.settingsButton),
+.aiButton {
     outline: none;
     animation: animButtonIn 2s ease-in-out infinite;
 }
 
-button::after, option::after{
+button:not(.infoButton):not(.settingsButton)::after,
+option:not(.infoButton):not(.settingsButton)::after {
     outline: none;
     animation: animButtonOut 1s ease-in-out forwards;
 }
 
-.quitButton:focus, .closeButton:focus{
+.quitButton:focus, .closeButton:focus {
     outline: none;
     animation: animRedIn 2s ease-in-out infinite;
 }
 
-.quitButton::after, .closeButton::after{
+.quitButton::after, .closeButton::after {
     outline: none;
     animation: animRedOut 1s ease-in-out forwards;
 }
+
 
 @keyframes animInputIn{
     0%{
