--- a/src/css/popUp.css
+++ b/src/css/popUp.css
@@ -21,21 +21,15 @@ input {
 input:focus {
     outline: none;
     animation: animationInput 2s ease-in-out infinite;
-}
-
-@keyframes animationInput{
-    0%{
-        border-color: #66afe9;
-        box-shadow: 0 0 8px rgba(102, 175, 233, 0);
-    }
-    50%{
-        border-color: #66afe9;
-        box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
-    }
-    100%{
-        border-color: #66afe9;
-        box-shadow: 0 0 8px rgba(102, 175, 233, 0);
-    }
+    border: 2.5px solid transparent;
+    background: 
+        linear-gradient(#292929, #292929) padding-box,
+        linear-gradient(to right, #ffc400, #ff9100, #ff530f, #e62c6d, #b25aff, #b25aff, #e62c6d, #ff530f, #ff9100, #ffc400) border-box;
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+    width: 80%;
+    background-size: 400% auto;
+    animation: gradient 15s linear infinite;
 }
 
 button {
@@ -46,7 +40,7 @@ button {
     color: white;
     cursor: pointer;
     font-size: 18px;
-    width: 50%;
+    width: 10%;
     font-family: 'Supreme', sans-serif;
     display: inline-flex;
     align-items: center;
@@ -71,4 +65,48 @@ button {
 
 @keyframes gradient {
     to {background-position: 400% center}
+}
+
+@keyframes FadeOut{
+    0%{opacity: 1;}
+    100%{opacity: 0;}
+}
+
+@keyframes FadeIn{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
+/*LOADER BY: https://cssloaders.github.io*/
+.loader {
+  width: 360px;
+  height: 100px;
+  display: flex;
+  position: relative;
+  background-image: linear-gradient(100deg, transparent, rgba(38, 50, 56, 0.5) 50%, transparent 80%), linear-gradient(#898989 20px, transparent 0), linear-gradient(#898989 20px, transparent 0), linear-gradient(#898989 20px, transparent 0);
+  background-repeat: no-repeat;
+  background-size: 75px 100px,  125px 20px, 260px 20px, 260px 20px;
+  background-position: 0% 0, 120px 0, 120px 40px, 120px 80px;
+  box-sizing: border-box;
+  animation: animloader 1s linear infinite;
+}
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
+  width: 100px;
+  height: 100px;
+  border-radius: 8px;
+  background: #898989;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@keyframes animloader {
+  0% {
+    background-position: 0% 0, 120px 0, 120px 40px, 120px 80px;
+  }
+  100% {
+    background-position: 100% 0, 120px 0, 120px 40px, 120px 80px;
+  }
 }
