--- a/src/css/style.css
+++ b/src/css/style.css
@@ -347,9 +347,9 @@ html {
     font-family: 'Supreme', sans-serif;
 }
 
-.cleanSection input {flex: 1;}
+.cleanSection input {width: 70%;}
 
-.cleanSection button {flex-shrink: 0; }
+.cleanSection button {width: 30%;}
 
 .nameTaskUser{
     display: flex;
@@ -391,7 +391,7 @@ html {
 canvas{font-family: 'Excon', sans-serif;}
 
 select{
-    width: 80%;
+    width: 72%;
     height: 40px;
     font-family: 'Supreme', sans-serif;
     background-color: #3d3d3d;
