FIX: Fixed AI Input anim
* fixed animation for AI Input glow effect

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,7 +130,7 @@ li {
     width: 100px;
 }
 
-input:focus:not(#checkbox):not(#joinBeta) {
+input:focus:not(#checkbox):not(#joinBeta):not(#aiInput) {
     outline: none;
     animation: animInputIn 2s ease-in-out infinite;
 }
