ADD: Added new feedback menu
* added new options for menu, now you can choose between a bug or a enhancement to report

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -560,3 +560,10 @@ option{font-family: 'Supreme', sans-serif; color: #009dff;;}
 }
 
 #tipImage{padding-right: 5px;}
+
+.feedbackSelection{display: none;}
+
+#bug, #feedbackBtn{
+    cursor: pointer;
+    text-decoration: underline;
+}
