--- a/src/css/style.css
+++ b/src/css/style.css
@@ -140,7 +140,7 @@ input::after{
     animation: animInputOut 1s ease-in-out forwards;
 }
 
-button:focus:not(.infoButton):not(.settingsButton), .aiButton {
+button:focus:not(.infoButton):not(.settingsButton):not(.quitButton):not(.closeButton), .aiButton {
     outline: none;
     animation: animButtonIn 2s ease-in-out infinite;
 }
