feat: adding new feautures
* fixed some mismatchs with english language
* added a new indicator for the new version

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -569,3 +569,6 @@ option{font-family: 'Supreme', sans-serif; color: #009dff;;}
 }
 
 .arrowMenu{rotate: 180deg;}
+
+#updateIcon:hover{cursor: pointer;}
+#updateIcon:hover::after{cursor: default;}
