--- a/src/css/style.css
+++ b/src/css/style.css
@@ -570,5 +570,16 @@ option{font-family: 'Supreme', sans-serif; color: #009dff;;}
 
 .arrowMenu{rotate: 180deg;}
 
+@keyframes rotateAnimation {
+    0%{rotate: 0deg;}
+    100%{rotate: 180deg;}
+}
+
+@keyframes rotateAnimationBackward {
+    0%{rotate: 180deg;}
+    100%{rotate: 0deg;}
+}
+
+
 #updateIcon:hover{cursor: pointer;}
 #updateIcon:hover::after{cursor: default;}
