--- a/src/css/companyCreation.css
+++ b/src/css/companyCreation.css
@@ -1,18 +1,19 @@
 body {
     background-color: #1a1a1a;
-    font-family: 'Supreme', sans-serif;
+    font-family: 'Switzer', sans-serif;
 }
   
 h1{
     color: white;
-    font-size: 80px;
+    font-size: 70px;
     text-align: center;
+    font-family: 'General Sans', sans-serif;
     line-height: 1.2;
 }
 
 h3{
     color: white;
-    font-family: 'Supreme', sans-serif;
+    font-family: 'Switzer', sans-serif;
     text-align: center;
 }
 
@@ -35,7 +36,7 @@ input {
     background: #3d3d3d;
     color: #fff;
     font-size: 15px;
-    font-family: 'Supreme', sans-serif;
+    font-family: 'Switzer', sans-serif;
 }
 
 input:focus {
@@ -69,7 +70,7 @@ button{
     cursor: pointer;
     transition: opacity 0.3s;
     font-size: 20px;
-    font-family: 'Supreme', sans-serif;
+    font-family: 'Switzer', sans-serif;
     margin-left: 90px;
     margin-top: 100px;
     display: inline-flex;
@@ -90,7 +91,7 @@ button{
 
 #warn{
     color: white;
-    font-family: 'Supreme', sans-serif;
+    font-family: 'Switzer', sans-serif;
     text-align: center;
     font-size: 20px;
     display: inline-flex;
