--- a/src/css/boot.css
+++ b/src/css/boot.css
@@ -1,54 +1,24 @@
-body{background-color: #1a1a1a;}
+:root{
+  --background: #1a1a1a;
+  --background-loader: rgba(255, 255, 255, 0.15);
+  --color: #FFF;
+}
+
+html[data-theme="light"]{
+  --background: #ffffff;
+  --background-loader: rgba(0, 0, 0, 0.15);
+  --color: #000000;
+}
+
+body{background-color: var(--background);}
 
 /*LOADER BY: https://cssloaders.github.io*/
-/*.loader {
-  width: 20px;
-  height: 12px;
-  display: block;
-  margin: auto;
-  position: relative;
-  border-radius: 4px;
-  color: #FFF;
-  background: currentColor;
-  box-sizing: border-box;
-  animation: animloader 0.6s 0.3s ease infinite alternate;
-}
-
-.loader::after,
-.loader::before {
-  content: '';  
-  box-sizing: border-box;
-  width: 20px;
-  height: 12px;
-  background: currentColor;
-  position: absolute;
-  border-radius: 4px;
-  top: 0;
-  right: 110%;
-  animation: animloader  0.6s ease infinite alternate;
-}
-
-.loader::after {
-  left: 110%;
-  right: auto;
-  animation-delay: 0.6s;
-}
-
-@keyframes animloader {
-  0% {
-    width: 20px;
-  }
-  100% {
-    width: 48px;
-  }
-}*/
-
 .loader {
   width: 40%;
   height: 4.8px;
   display: inline-block;
   position: relative;
-  background: rgba(255, 255, 255, 0.15);
+  background: var(--background-loader);
   overflow: hidden;
 }
 .loader::after {
@@ -56,7 +26,7 @@ body{background-color: #1a1a1a;}
   box-sizing: border-box;
   width: 0;
   height: 4.8px;
-  background: #FFF;
+  background: var(--color);
   position: absolute;
   top: 0;
   left: 0;
