--- a/src/css/companyCreation.css
+++ b/src/css/companyCreation.css
@@ -1,10 +1,22 @@
+:root{
+  --background: #1a1a1a;
+  --color: #FFF;
+  --input-background: #3d3d3d;
+}
+
+html[data-theme="light"]{
+  --background: #ffffff;
+  --color: #000000;
+  --input-background: #adadad;
+}
+
 body {
-    background-color: #1a1a1a;
+    background-color: var(--background);
     font-family: 'Switzer', sans-serif;
 }
   
 h1{
-    color: white;
+    color: var(--color);
     font-size: 70px;
     text-align: center;
     font-family: 'General Sans', sans-serif;
@@ -12,7 +24,7 @@ h1{
 }
 
 h3{
-    color: white;
+    color: var(--color);
     font-family: 'Switzer', sans-serif;
     text-align: center;
 }
@@ -22,6 +34,7 @@ h3{
     background-image: linear-gradient(to right, #ffc400, #ff9100, #ff530f, #e62c6d, #b25aff, #b25aff, #e62c6d, #ff530f, #ff9100, #ffc400);
     background-size: 200% auto;
     -webkit-background-clip: text;
+    background-clip: text;
     animation: gradient 8s linear infinite;
 }
 
@@ -33,8 +46,8 @@ input {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background: #3d3d3d;
-    color: #fff;
+    background: var(--input-background);
+    color: var(--color);
     font-size: 15px;
     font-family: 'Switzer', sans-serif;
 }
@@ -66,7 +79,7 @@ button{
     border: none;
     border-radius: 5px;
     background: #009dff;
-    color: white;
+    color: var(--color);
     cursor: pointer;
     transition: opacity 0.3s;
     font-size: 20px;
