feat: finishing languages
* added a Language Dropdown in Settings

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -423,7 +423,7 @@ option{
     color: var(--color);
 }
 
-.appTheme{width: 100%;}
+.appTheme, .appLanguage{width: 100%;}
 
 .sidebar-ai {
     height: 100%;
